--- a/css/components.css
+++ b/css/components.css
@@ -82,7 +82,6 @@ Containers
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
 }
 
 /*===============================================
